--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-supabase==2.6.0
-pydantic==2.10.6
-python-dateutil==2.9.0.post0
-typing_extensions==4.13.2
+Flask==2.3.0
+gunicorn==23.0.0
+openpyxl==3.1.2
+reportlab==4.0.0
